# ecodeapp

./: CMakeLists.txt  README.md
inc/: ecode.h
src/cpu1/: ecodecpu.c  link.ld
src/cpu2/: ecodecpu.c  link.ld
src/lib/: ecodecb.c
